src/test/deca/context/invalid/classes/class_with_void_field.deca
// Description :
// tentative de déclarer un champ de type void
//
// Resultats :
//    Erreur contextuelle
//    Ligne 9 : Un champ ne peut pas être de type void

class B {
    void v; // doit échouer
}
